# StenoCLI

./: .gitignore  README.md  cli.py  photoStegano.py  pyproject.toml  requirements.txt  setup.py  test.sh  textStegano.py
StenoCLI/: Image.py  Text.py  __main__.py  helpers.py
