[tool.poetry]
name = "stenocli"
version = "0.1.0"
description = "Image and Text Steganography cli tool"
authors = ["sarthakpranesh <sarthak.pranesh2018@vitstudent.ac.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
